k8s/service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  ports:
    - name: web-ports
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    component: web
  type: NodePort
